# universal-file-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tz.txt
.github/workflows/: ci.yml
examples/: README.md  examples.py
parser/: __init__.py  base.py  cli.py  parser.py  utils.py
parser/formats/: __init__.py  archive_parser.py  bin_parser.py  csv_parser.py  html_parser.py  ini_parser.py  json_parser.py  ods_parser.py  text_parser.py  toml_parser.py  xlsx_parser.py  xml_parser.py  yaml_parser.py
tests/: __init__.py  test_all_formats.py  test_csv.py  test_json.py  test_parser.py  test_utils.py  test_xml.py  test_yaml.py
tests/data/: test.csv  test.html  test.ini  test.json  test.md  test.toml  test.tsv  test.txt  test.xml  test.yaml
